# novelang

./: Cargo.toml  README.md  novelang.vim  test.nvl
examples/: break.nvl  comment.nvl  else.nvl  exprs.nvl  fib.nvl  fizzbuzz.nvl  if.nvl  input_test.nvl  numeron.nvl  prime.nvl  return.nvl  roll.nvl  shadow_vars.nvl  sub.nvl  test.nvl
ftdetect/: novelang.vim
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compile.rs
indent/: novelang.vim
src/: block.rs  codegen.rs  exprs.rs  fuzz_utils.rs  lex.rs  lib.rs  line.pest  lval.rs  main.rs  parse.rs  parser.rs  prog.pest  run.rs  runner.rs  runtime.rs  semck.rs  span.rs  target.rs  types.rs  vm.rs
src/codegen/: expr.rs
src/exprs/: display.rs  eval.rs  items.rs  parse.rs  rp_node.rs  spannable.rs
src/lex/: fragments.rs  items.rs  macros.rs  test.rs  utils.rs
src/parse/: expr_type.rs  exprs.rs  from_tokens.rs  look_item.rs  macros.rs  stmt.rs  sub.rs  target.rs  type_check.rs  types.rs  utils.rs
src/parse/stmt/: assert.rs  call.rs  for.rs  input.rs  let.rs  modify.rs  print.rs  return.rs  roll.rs  sub.rs
src/runtime/: eval.rs  exprs.rs  typed.rs  val.rs  variable.rs
src/semck/: exprs.rs  types.rs  utils.rs
src/semck/stmt/: sub.rs
syntax/: novelang.vim
test_abnormal/: block.nvl  lex.nvl  parse.nvl  semck.nvl
vim/indent/: novelang.vim
