[package]
name = "novelang"
version = "0.1.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
ctrlc = { version = "3.1.7", features = ["termination"] }
structopt = "0.3.21"
rand = "0.8.1"
