[package]
name = "novelang"
version = "0.1.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.2.17", default-features = false, features = [
  "derive",
  "std",
] }
once_cell = { version = "1.13.1", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = [
  "as_ref",
  "from",
  "into",
  "display",
] }

# required for fuzzing
arbitrary = { version = "1.1.3", default-features = false, optional = true, features = [
  "derive_arbitrary",
] }

# TODO: replace with our own implementation
rand = { version = "0.8.5", default-features = false, features = [
  "getrandom",
  "small_rng",
] }

[dev-dependencies]
pretty_assertions = { version = "1.2.1", default-features = false, features = [
  "alloc",
] }
